--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,6 +23,11 @@
   url = "#featured"
   weight = 40
 
+[[main]]
+  name = "People"
+  url = "#people"
+  weight = 40
+  
 #[[main]]
   #name = "Contact"
   #url = "#contact"
