--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,9 +24,9 @@
   weight = 40
 
 #[[main]]
-  name = "People"
-  url = "#people"
-  weight = 45
+  #name = "People"
+  #url = "#people"
+  #weight = 45
   
 #[[main]]
   #name = "Contact"
