--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -11,7 +11,7 @@ title = "Machine Learning Stochastic Dynamics"
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
 #baseurl = "https://yingtangwebsite.netlify.app"
-baseurl = `https://yingtangwebsite.com/`
+baseurl = "https://yingtangwebsite.com/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
