--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,10 +23,10 @@
   url = "#featured"
   weight = 40
 
-#[[main]]
-  #name = "People"
-  #url = "#people"
-  #weight = 45
+[[main]]
+  name = "People"
+  url = "#people"
+  weight = 45
   
 #[[main]]
   #name = "Contact"
